# Q4-Learn-Agentic-AI---Giaic

./: README.md
2 AI assistant with gemini/: pyproject.toml
3 AI Agent OpenRouter/: .env  README.md
AI assistant/: .env
AI assistant/src/ai_assistant/: __init__.py
T1 uv practice/: pyproject.toml
T3 AI Agent OpenRouter/: pyproject.toml
T3 AI Agent OpenRouter/src/ai_agent_openrouter/: __init__.py  main.py
T4-Chatbot-Chainlit/: pyproject.toml
T4-Chatbot-Chainlit/src/4_chatbot_chainlit/: __init__.py
chainlit-ui/: .env  README.md  chatbot.py  pyproject.toml
chainlit-ui/src/chainlit_ui/: __init__.py  main.py
chatbot/: chatbot.py  main.py  pyproject.toml
check/: main.py
day2 AI assistant with gemini/: README.md
day2 AI assistant with gemini/src/ai_assistant/: main.py
uv practice/: README.md
