[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muzaffar Ali", email = "muzafark834@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.16",
]

[project.scripts]
ai-assistant = "ai_assistant:main"
ai-agent = "ai_assistant.main:agent"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
