[project]
name = "ai-agent-openrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muzaffar Ali", email = "muzafark834@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.16",
]

[project.scripts]
ai-agent-openrouter = "ai_agent_openrouter:main"
agent = "ai_agent_openrouter.main:agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
