[project]
name = "4-chatbot-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muzaffar Ali", email = "muzafark834@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
4-chatbot-chainlit = "chatbot_chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
